--- a/snippets/zfs.yml
+++ b/snippets/zfs.yml
@@ -43,7 +43,7 @@ zfs:sdrc:
 zfs:version:
   do: exec
   desc: check zfs version
-  command: if [[ $(uname) == Darwin ]]; then sysctl -a | grep -E '(zfs|spl)\.kext'; fi
+  command: if [[ $(uname) == Darwin ]]; then sysctl -a | grep -E '(zfs|spl)\.kext'; else dmesg | grep ZFS; fi
 zfs:space:
   do: exec
   desc: show zfs space usage, sort by snapshot usage
