--- a/snippets/programming.yml
+++ b/snippets/programming.yml
@@ -18,17 +18,17 @@ python:rm:weave:
 fd:rm:ipycp:
   do: exec
   desc: find and remove all .ipynb_checkpoints
-  command: find -type d -name '.ipynb_checkpoints' -exec rm -rf {} +
+  command: find . -type d -name '.ipynb_checkpoints' -exec rm -rf {} +
 
 fd:rm:py:aux:
   do: exec
   desc: remove python's auxiliary files
-  command: find \( -type f -name '*.py[co]' -o -type d -name '__pycache__' \) -delete
+  command: find . \( -type f -name '*.py[co]' -o -type d -name '__pycache__' \) -delete
 
 fd:ipy:clear:
   do: exec
   cesc: find all ipynb and clear output cells
-  command: find -name '*.ipynb' -exec jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace {} +
+  command: find . -name '*.ipynb' -exec jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace {} +
 
 jupyter:nb:
   do: exec
