--- a/snippets/install.yml
+++ b/snippets/install.yml
@@ -2,3 +2,7 @@ install:rmate:
   do: exec
   desc: install bash version of rmate
   command: wget -O $HOME/.local/bin/rmate https://raw.github.com/aurora/rmate/master/rmate && chmod +x $HOME/.local/bin/rmate
+install:neofetch:conf:
+  do: exec
+  desc: install custom neofetch config file
+  command: wget -q https://github.com/ickc/neofetch-config/raw/kolen/config.conf -O ${HOME}/.config/neofetch/config.conf
