ssh.yml: add mosh:co

--- a/snippets/ssh.yml
+++ b/snippets/ssh.yml
@@ -4,6 +4,9 @@ ssh:ed:
 ssh:co:
   do: exec
   command: ssh khcheung@cori.nersc.gov
+mosh:co:
+  do: exec
+  command: mosh khcheung@cori<<host(03)>>-224.nersc.gov
 ssh:go:
   do: exec
   command: ssh khcheung@gordita.physics.berkeley.edu
